# templates

./: README.md
haskell/: README.md  cabal.haskell-ci  template.toml  {{ project }}.cabal
haskell/.github/workflows/: haskell-ci.yml
